css/style.css
body {
	font-family: Verdana, Arial;
	font-size: 12px;
	color: #595441;
	background:#e3f3ff;
	text-align:center;
	margin-top:0px;
	padding-top:10px;
}
#wrap {
	max-width:950px;
	min-height:150px;
	margin:0 auto;
	background:white;
	text-align:left;
	padding:5px 20px 10px 20px;
	border-left:3px solid #2a85b3;
	border-right:3px solid #2a85b3;
	border-bottom:3px solid #2a85b3;
	border-top:3px solid #2a85b3;
	border-radius:20px;
}
.hide-if-no-js {display: none;}
div, p, td {
	font-family: Verdana, Arial;
	font-size: 12px;
}
a, a:link, a:active, a:visited {
	color: #2a85b3;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
h1 {height:50px;margin:0;float:right;max-width:500px;}
h1 a {text-align:right;font-size:20px;float:right;}
h1 a, h1 a:link, h1 a:active, h1 a:visited {color:#2a85b3}
h1 a:hover{text-decoration:none;}
h1 a:hover span{text-decoration:underline;color:#88c0eb}
#yourls-logo {
    border:0px;
    width:300px;
}
ul#admin_menu {
	min-height:100px;
	list-style-type:none;
	padding:0;
	font-size:105%;
}
ul#admin_menu li {
	color:#aaa;
	padding:1px 0;
}
ul#admin_menu li:hover {
	list-style-type:square;
	color:#000;
}

code {
	background:#eaeaef;
	padding:0 2px;
}
tt {
	background:#ffc;
	padding:0 2px;
}

input, textarea {
	border-radius:3px;
}
Input.text, select, textarea {
	font-family: Verdana, Arial;
	font-size: 10px;
	color: #595441;
	background-color: #FFFFFF;
	border: 1px solid #88c0eb;
	margin:1px;
}
input.button {
	font-family: Verdana, Arial;
	font-size: 10px;
	color: #595441;
	font-weight: bold;
	background-color: #FFFFFF;
	border: 1px solid #88c0eb;
	cursor:pointer;
}
input.primary {
	border:2px solid #2A85B3;
	background:#fafafe;
}
input.text:focus, textarea:focus {
	border:2px solid #2A85B3;
	margin:0px;
}
tr.edit-row  td {
	background:#e3f3ff !important;
}
#new_url {
	text-align:center;
	padding:1px;
	border:1px solid #CDCDCD;
	background:#fff;
	clear:both;
}
#new_url div {
	background:#C7E7FF;
	padding:4px;
}
#new_url_form {
	padding:4px;
}
#new_url #feedback {
	background:#ff8;
	color:#88c0eb;
	width:50%;
	margin:0px 25%;
	padding:2px;
	border:1px solid #ff8;
}
#new_url #feedback .fail {
	color:#f55;
}
#add-url {width:400px}
td.url small a{
	color:#bbc;
}
/* Hide buttons visually but keep them accessible to screen readers */
body.desktop td.actions input, body.desktop td.actions a {
	opacity: 0;
	pointer-events: none;
	transition: opacity 0.2s ease;
}
td.timestamp span.timestamp {
    display:none;
}
td.actions input.disabled, td.actions input.loading {
	visibility:visible;
}
/* Show buttons on row hover */
tr:hover td.actions input, tr:hover td.actions a {
	opacity: 1;
	pointer-events: auto;
}
/* Show buttons when any button in the actions cell receives focus */
td.actions:focus-within input, td.actions:focus-within a {
	opacity: 1;
	pointer-events: auto;
}
/* Show all buttons when any element in the row receives focus (for keyboard nav through the entire row) */
tr:focus-within td.actions input, tr:focus-within td.actions a {
	opacity: 1;
	pointer-events: auto;
}
td.actions .button {
	font-family: Verdana, Arial;
	font-size: 10px;
	color: #595441;
	font-weight: bold;
	background-color: #FFFFFF;
	border: 1px solid #88c0eb;
	border-radius:3px;
	cursor:pointer;
	height:22px;
	width:22px;
	margin-top:0px;
	margin-right:5px;
	display:block;
	float:left;
	text-indent:-9999px;
	outline:0px;
}
td.actions .button:active {
	border:1px solid #000;
}
td.actions .button:hover {
	text-decoration:none;
}
td.actions .button.disabled, #add-button.disabled {
	border:1px solid #333;
	background:#ccc;
}
td.actions .button.loading, #add-button.loading {
	background:#cc7 url(../images/loading.gif) center center no-repeat;
	color:#cc7;
}
td.actions .button_share {
	background:transparent url(../images/share.svg) center no-repeat;
}
td.actions .button_edit {
	background:transparent url(../images/pencil.svg) center no-repeat;
}
td.actions .button_delete {
	background:transparent url(../images/delete.svg) center no-repeat;
}
td.actions .button_stats {
	background:transparent url(../images/chart_bar.svg) center no-repeat;
}
#main_table tfoot th, #main_table tfoot th div {
	font-size:10px;
}
.error {
	color: red;
	background:#fee;
}
.warning {
	color: orange;
	background:#ffe9bf;
}
.success {
	color: green;
	background:#efe;
}
#login {
	max-width: 300px;
	margin: 200px auto 0px auto;
}
#login p{
	font-weight: bold;
}
#login .text {
	width: 100%;
}
#login ul {
	padding-left:0px;
	list-style-type:none;
	text-indent:0;
}
#login ul li {
	padding:0 0 5px 20px;
}
#login ul.error li {
	background:transparent url(../images/cancel.svg) top left no-repeat;
}
#login ul.warning li {
	background:transparent url(../images/error.svg) top left no-repeat;
}
#login ul.success li {
	background:transparent url(../images/accept.svg) top left no-repeat;
}
.sub_wrap {
	max-width:580px;
	padding-bottom:30px;
	text-align:justify;
}
.sub_wrap span {
	background:#ffa;
	padding:0 2px;
}
a.bookmarklet {
	border:2px solid #2a85b3;
	border-radius:3px;
	padding:5px 5px 5px 20px;
	background:#eef url(../images/favicon.svg) 2px center no-repeat;
	padding-left:30px;
	margin:3px;
	display:inline-block;
}
a.bookmarklet:hover {
	text-decoration:none;
	background-position:3px center;
}
#footer {
	text-align:center;
	margin-top:20px;
}
#footer p {
	padding:10px;
	background:white;
	margin:0 auto;
	max-width:950px;
	border-radius:10px;
	border:2px solid #2a85b3;
	border-bottom-left-radius:25px;
	border-bottom-right-radius:25px;
}
#footer p a {
	background:#fff url(../images/favicon.svg) 2px center no-repeat;
	padding-left:30px;
}

.notice {
	border:1px solid #2a85b3;
	background: #F3FAFD;
	border-radius:6px;
	width:70%;
	margin-left:15%;
	padding-left:10px;
	margin-bottom:5px;
}

.jquery-notify-bar {
  width:100%;
  position:fixed;
  top:0;
  left:0;
  z-index:32768;
  background-color:#efefef;
  font-size:18px;
  color:#000;
  text-align:center;
  font-family: Arial, Verdana, sans-serif;
  padding:20px 0px;
  border-bottom:1px solid #bbb;
  filter:alpha(opacity=95);
  opacity:0.95;
  text-shadow: 0 1px 1px rgba(0,0,0,0.1);
}
.jquery-notify-bar.error ,.jquery-notify-bar.fail {
  color:#f00;
  background-color:#fdd;
}
.jquery-notify-bar.error span,.jquery-notify-bar.fail span{
	background:transparent url("../images/error.svg") no-repeat left center;
	padding-left:20px;
}.jquery-notify-bar.success span{
	background:transparent url("../images/accept.svg") no-repeat left center;
	padding-left:20px;
}
.jquery-notify-bar.success {
  color:#060;
  background-color:#aea;
}
.notify-bar-close {
  position:absolute;
  left:95%;
  font-size:11px;
}
tr.plugin.active a{ font-weight:bolder;}
body.desktop tr.plugin td.plugin_desc small{ visibility:hidden;}
tr:hover.plugin td.plugin_desc small{ visibility:visible;}

#delete-confirm-dialog {
    background-color: #ffffff;
    width: 50em;
    height: 19em;
    padding: 0px;
    border: 3px solid #2a85b3;
    border-radius: 20px;
}
#delete-confirm-dialog > div[name="dialog_title"] {
    background-color: #c7e7ff;
    font-size: 20px;
    color: #026090;
    text-align: center;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    border-start-start-radius: 17px 17px;
    border-start-end-radius: 17px 17px;
}
#delete-confirm-dialog div.confirm-message {
    background-color: #ffffff;
    width: calc(50em - 4em);
    height: calc(20em - 50px - 5em - 2em + 6px);
    float: none;
    text-align: left;
    padding: 1em 2em;
    overflow: hidden;
}
#delete-confirm-dialog div.confirm-message ul {
    border-left: 5px solid #026090;
    list-style-type: none;
    padding: 0 1em;
}
#delete-confirm-dialog div.confirm-message ul li {
    margin-bottom: 0.5em;
}
#delete-confirm-dialog div.confirm-message ul li span {
    border: 1px solid #c7e7ff;
    border-radius: 3px;
    padding: 1px 5px;
    color:#333;
}
#delete-confirm-dialog div.button-group {
    background-color: #e3f3ff;
    width: calc(50em - 4em);
    height: 2em;
    float: none;
    text-align: right;
    padding: 1em 2em;
    border-end-start-radius: 17px 17px;
    border-end-end-radius: 17px 17px;
}
#delete-confirm-dialog::backdrop {
    background-color: #666;
    opacity: 80%;
}

